--- a/index.html
+++ b/index.html
@@ -9,28 +9,31 @@
 <body>
 <div class="container">
     
-    <form id="formulario">
-        <label for="nome-contato">Nome do contato:</label>
-        <input id="nome-contato" type="text" required placeholder="Nome">
-        <label for="numero-contato">Numero do contato:</label>
-        <input id="numero-contato" type="tel" required placeholder="(99) 9 9999-9999" maxlength="15" minlength="14">
-        <button type="submit">Adicionar +</button>
-    </form>
+    <div class="formulario-container">
+        <form id="formulario">
+            <label for="nome-contato">Nome do contato:</label>
+            <input id="nome-contato" type="text" required placeholder="Nome">
+            <label for="numero-contato">Numero do contato:</label>
+            <input id="numero-contato" type="tel" required placeholder="(99) 9 9999-9999" maxlength="15" minlength="14">
+            <button type="submit">Adicionar +</button>
+        </form>
+    </div>
 
+    <div class="tabela-container">
         <table id="tabela">
             <caption>Agenda de Contatos</caption>
-    
             <thead>
-                    <tr>
-                        <th scope="col">Nomes</th>
-                        <th scope="col">Telefones</th>
-                    </tr>
+                <tr>
+                    <th scope="col">Nomes</th>
+                    <th scope="col">Telefones</th>
+                </tr>
             </thead>
             <tbody>
             </tbody>
         </table>
+    </div>
 
 </div>
-    <script src="./main.js"></script>
+<script src="./main.js"></script>
 </body>
 </html>
